test/fail/wrong_assign.ly
<@lily integer a = "10" @>
